# fast-modulo

./: .gitlab-ci.yml  Cargo.toml  README.md
benches/: my_benchmark.rs
src/: lib.rs
