[package]
name = "fast-modulo"
version = "0.1.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.3"
rand = "0.7.3"

[[bench]]
name = "my_benchmark"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
