[package]
name = "fast-modulo"
version = "0.3.0"
authors = ["Toru3 <ryuutet@gmail.com>"]
edition = "2018"
description = "fast modulo calculation"
license = "AGPL-3.0-or-later"
documentation = "https://docs.rs/fast-modulo/"
repository = "https://gitlab.com/Toru3/fast-modulo"
readme = "README.md"
keywords = ["fast", "modulo"]
categories = ["hardware-support", "no-std"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3.5"
rand = "0.8.4"

[[bench]]
name = "my_benchmark"
harness = false

[package.metadata.docs.rs]
rustdoc-args = [
    "--html-in-header",
    "katex.html",
]
